Change media query values to prevent overlap

--- a/generalpages/static/generalpages/css/causes.css
+++ b/generalpages/static/generalpages/css/causes.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 700px){
+@media only screen and (min-width: 703px){
 	
 	.causes_container {
 		display:grid;
@@ -41,7 +41,7 @@
 	}
 }
 
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 702px){
 
 	.causes_container {
 		display:grid;
