--- a/generalpages/static/generalpages/css/main.css
+++ b/generalpages/static/generalpages/css/main.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 700px){
+@media only screen and (min-width: 703px){
     .big-btn {
         margin: 5rem; 
         font-size: 2rem;
@@ -7,7 +7,7 @@
     }
 }
 
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 702px){
     .big-btn {
         margin: 2rem; 
         font-size: 2rem;
