--- a/store/static/store/css/cart.css
+++ b/store/static/store/css/cart.css
@@ -7,7 +7,7 @@
 	padding-bottom: 1rem;
 }
 
-@media only screen and (min-width: 700px){
+@media only screen and (min-width: 703px){
 
 	.body_box {
 		padding: 0 1rem 0 1rem;
@@ -66,7 +66,7 @@
 
 }
 
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 702px){
 	.align-end {
 		width: 90vw;
 		text-align: end;
