--- a/store/static/store/css/collections.css
+++ b/store/static/store/css/collections.css
@@ -24,7 +24,7 @@
     font-size: 2.4rem;
 }
 
-@media only screen and (min-width: 700px){
+@media only screen and (min-width: 703px){
     .sticker {
         display: grid;
         grid-template-columns: 1fr 2fr;
@@ -50,7 +50,7 @@
     }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 702px) {
     .sticker {
         display: grid;
         width: 90vw;
